Added complete space download functionality
